@@ -6,7 +6,7 @@
 AUTOMAKE_OPTIONS=foreign 1.5
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = intl m4  po util html man
+SUBDIRS = po util html man intl m4
 
 if BUILD_HERCIFC
 HERCIFC=hercifc
@@ -220,9 +220,8 @@ dyngui.res: config.h  dyngui.rc  dynguib.h  dynguip.h  dynguiv.h
 	windres -DHAVE_CONFIG_H --include-dir=. -i dyngui.rc -o dyngui.res -O coff
 endif
 
-EXTRA_DIST = CHANGES README.COMMADPT README.CVS README.ECPSVM \
-             README.HDL README.NETWORKING README.OSX README.TAPE \
-             hercules.cnf autoconf/config.rpath
+EXTRA_DIST = autoconf/config.rpath  CHANGES README.COMMADPT README.CVS README.ECPSVM \
+             README.HDL README.NETWORKING README.OSX README.TAPE hercules.cnf
 
 noinst_HEADERS  = fishhang.h \
     hostinfo.h cpuint.h feat370.h feat390.h feat900.h featall.h featchk.h \
